Frontend/my-react-app-manual/vite

4:24:38 PM [vite] (client) Re-optimizing dependencies because lockfile has changed
(node:34018) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)

  VITE v6.3.3  ready in 283 ms

  ➜  Local:   http://localhost:5173/
  ➜  Network: use --host to expose
  ➜  press h + enter to show help
4:24:51 PM [vite] (client) Pre-transform error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytic
4:24:51 PM [vite] (client) Pre-transform error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual): [SyntaxError] Unexpected token 'export'
/Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/postcss.config.js:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at cjsLoader (node:internal/modules/esm/translators:263:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:196:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
  Plugin: vite:css
  File: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/src/index.css
4:24:51 PM [vite] (client) Pre-transform error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytic
4:24:51 PM [vite] (client) Pre-transform error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual): [SyntaxError] Unexpected token 'export'
/Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/postcss.config.js:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at cjsLoader (node:internal/modules/esm/translators:263:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:196:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
  Plugin: vite:css
  File: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/src/index.css (x2)
4:24:52 PM [vite] Internal server error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-re
4:24:52 PM [vite] Internal server error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual): [SyntaxError] Unexpected token 'export'
/Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/postcss.config.js:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at cjsLoader (node:internal/modules/esm/translators:263:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:196:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
  Plugin: vite:css
  File: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/src/index.css
4:25:40 PM [vite] Internal server error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-re
4:25:40 PM [vite] Internal server error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual): [SyntaxError] Unexpected token 'export'
/Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/postcss.config.js:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at cjsLoader (node:internal/modules/esm/translators:263:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:196:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
  Plugin: vite:css
  File: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/src/index.css (x2)
4:25:40 PM [vite] Internal server error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-re
4:25:40 PM [vite] Internal server error: Failed to load PostCSS config (searchPath: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual): [SyntaxError] Unexpected token 'export'
/Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/postcss.config.js:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at cjsLoader (node:internal/modules/esm/translators:263:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:196:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)
  Plugin: vite:css
  File: /Users/Jays_mac/Documents/Healthcare Analytics/my-react-app-manual/src/index.css (x3)
